Successful installation of Oracle 18C XE
Issues resolved:
- #1 "XE: RPM Dependency - Cannot Use 19C Preinstall RPM"
- #3 "XE: YUM fails for OL7"
- #4 "XE: load passwords failed due to censored"
- #6 "XE: PIP fails to install PEXPECT"
- #7 "XE: Unable to find 18C XE RPM"
- #8 "XE: Configuration Loops Indefinitely"
- #9 "XE: Invalid Protocols for Firewall Rules"

Added .yamllint for my preferred yamllint settings.

Remove python_interpreter from Ansible configuration

Separated Oracle Linux 7 tasks into a separate file, ol7_tasks.yml.

--- a/templates/enable_em_to_ext_clients.sh.j2
+++ b/templates/enable_em_to_ext_clients.sh.j2
@@ -8,7 +8,7 @@ export ORACLE_SID=XE
 export ORACLE_HOME=/opt/oracle/product/18c/dbhomeXE
 export PATH=${ORACLE_HOME}/bin:${PATH}
 
-sqlplus -L system/{{ pw_all }} <<DONE
+sqlplus -L system/{{ xe_password }} <<DONE
 EXEC DBMS_XDB.SETLISTENERLOCALACCESS(FALSE);
 EXIT
 DONE
